@@ -16,18 +16,22 @@
  *****************************************************************************/
 package org.compiere.print;
 
+import java.io.Serializable;
 import java.sql.Clob;
 import java.sql.PreparedStatement;
 import java.sql.ResultSet;
 import java.sql.SQLException;
 import java.sql.Timestamp;
 import java.util.ArrayList;
+import java.util.List;
 import java.util.Properties;
 import java.util.logging.Level;
 
+import org.compiere.model.MFactAcct;
 import org.compiere.model.MLookupFactory;
 import org.compiere.model.MQuery;
 import org.compiere.model.MRole;
+import org.compiere.model.MSysConfig;
 import org.compiere.model.MTable;
 import org.compiere.util.CLogMgt;
 import org.compiere.util.CLogger;
@@ -62,6 +66,13 @@ import org.compiere.util.ValueNamePair;
  * @author Paul Bowden (phib)
  * 				<li> BF 2908435 Virtual columns with lookup reference types can't be printed
  *                   https://sourceforge.net/tracker/?func=detail&aid=2908435&group_id=176962&atid=879332
+ *  @contributor  Fernandinho (FAIRE)
+ *  				- http://jira.idempiere.com/browse/IDEMPIERE-153
+ * @author Yamel Senih, ysenih@erpcya.com, ERPCyA http://www.erpcya.com
+ * 		<li>BR [ 236 ] Report View does not refresh when print format is changed
+ * 			@see https://github.com/adempiere/adempiere/issues/236
+ * 		<li>BR [ 237 ] Same Print format but distinct report view
+ * 			@see https://github.com/adempiere/adempiere/issues/237
  */
 public class DataEngine
 {
@@ -73,7 +84,7 @@ public class DataEngine
 	{
 		this(language, null);
 	}	//	DataEngine
-	
+
 	/**
 	 *	Constructor
 	 *	@param language Language of the data (for translation)
@@ -108,6 +119,8 @@ public class DataEngine
 	/** Key Indicator in Report			*/
 	public static final String KEY = "*";
 
+	private static final String REPORT_DISPLAY_YES_NO = "REPORT_DISPLAY_YES_NO";
+
 
 	/**************************************************************************
 	 * 	Load Data
@@ -119,7 +132,7 @@ public class DataEngine
 	 */
 	public PrintData getPrintData (Properties ctx, MPrintFormat format, MQuery query)
 	{
-		return getPrintData(ctx, format, query, false);
+		return getPrintData(ctx, format, query, false, 0);
 	}
 	
 	/**************************************************************************
@@ -129,20 +142,28 @@ public class DataEngine
 	 * 	@param query query
 	 * 	@param ctx context
 	 *  @param summary
+	 *  @param p_AD_ReportView_ID
 	 * 	@return PrintData or null
 	 */
-	public PrintData getPrintData (Properties ctx, MPrintFormat format, MQuery query, boolean summary)
+	public PrintData getPrintData (Properties ctx, MPrintFormat format, MQuery query, boolean summary, int p_AD_ReportView_ID)
 	{
-
-		/** Report Summary FR [ 2011569 ]**/ 
-		m_summary = summary; 
 
 		if (format == null)
 			throw new IllegalStateException ("No print format");
+
+		/** Report Summary FR [ 2011569 ]**/ 
+		m_summary = !format.isForm() && summary;
 		String tableName = null;
 		String reportName = format.getName();
-		//
-		if (format.getAD_ReportView_ID() != 0)
+		//	Yamel Senih BR [ 236 ] Clear Query before add new restrictions
+		query.clear();
+		//	End Yamel Senih
+		//	FR [ 237 ]
+		if(p_AD_ReportView_ID == 0) {
+			p_AD_ReportView_ID = format.getAD_ReportView_ID();
+		}
+		//	
+		if (p_AD_ReportView_ID > 0)
 		{
 			String sql = "SELECT t.AD_Table_ID, t.TableName, rv.Name, rv.WhereClause "
 				+ "FROM AD_Table t"
@@ -153,7 +174,7 @@ public class DataEngine
 			try
 			{				
 				pstmt = DB.prepareStatement(sql, m_trxName);
-				pstmt.setInt(1, format.getAD_ReportView_ID());
+				pstmt.setInt(1, p_AD_ReportView_ID);
 				rs = pstmt.executeQuery();
 				if (rs.next())
 				{
@@ -193,7 +214,7 @@ public class DataEngine
 				tableName += "t";
 				format.setTranslationViewQuery (query);
 			}
-		}		
+		}
 		//
 		PrintData pd = getPrintDataInfo (ctx, format, query, reportName, tableName);
 		if (pd == null)
@@ -236,6 +257,10 @@ public class DataEngine
 		StringBuffer sqlSELECT = new StringBuffer("SELECT ");
 		StringBuffer sqlFROM = new StringBuffer(" FROM ").append(tableName);
 		ArrayList<String> groupByColumns = new ArrayList<String>();
+		
+		//Activate when Line_ID or Record_ID is present
+		boolean isTableIDRequired = false;
+		boolean isTableIDPresent = false;
 		//
 		boolean IsGroupedBy = false;
 		//
@@ -249,6 +274,7 @@ public class DataEngine
 			+ "pfi.isRunningTotal,pfi.RunningTotalLines, "				//	20..21
 			+ "pfi.IsVarianceCalc, pfi.IsDeviationCalc, "				//	22..23
 			+ "c.ColumnSQL, COALESCE(pfi.FormatPattern, c.FormatPattern) "		//	24, 25
+			+ " , pfi.isDesc " //26
 			+ "FROM AD_PrintFormat pf"
 			+ " INNER JOIN AD_PrintFormatItem pfi ON (pf.AD_PrintFormat_ID=pfi.AD_PrintFormat_ID)"
 			+ " INNER JOIN AD_Column c ON (pfi.AD_Column_ID=c.AD_Column_ID)"
@@ -315,13 +341,22 @@ public class DataEngine
 					//	RunningTotalLines only once - use max
 					m_runningTotalLines = Math.max(m_runningTotalLines, rs.getInt(21));	
 
+				if (ColumnName.equalsIgnoreCase(MFactAcct.COLUMNNAME_Line_ID) 
+						|| ColumnName.equalsIgnoreCase(MFactAcct.COLUMNNAME_Record_ID)
+						) {
+					isTableIDRequired = true;
+				}
+				
+				if (ColumnName.equalsIgnoreCase(MFactAcct.COLUMNNAME_AD_Table_ID)) {
+					isTableIDPresent = true;
+				}				
 				//	General Info
 				boolean IsPrinted = "Y".equals(rs.getString(15));
 				int SortNo = rs.getInt(16);
 				boolean isPageBreak = "Y".equals(rs.getString(17));
 				
 				String formatPattern = rs.getString(25);
-
+				boolean isDesc = "Y".equals(rs.getString(26));
 				//	Fully qualified Table.Column for ordering
 				String orderName = tableName + "." + ColumnName;
 				String lookupSQL = orderName;
@@ -341,8 +376,17 @@ public class DataEngine
 					;
 				}
 				//	-- Parent, TableDir (and unqualified Search) --
-				else if ( (IsParent && DisplayType.isLookup(AD_Reference_ID)) 
-						|| AD_Reference_ID == DisplayType.TableDir
+				else if ( /* (IsParent && DisplayType.isLookup(AD_Reference_ID))
+				// Test case - create a IsParent column with a different name than parent with ref table -- reporting on this column break  
+				 * or try to report on any column here:
+				 * 
+select t.tablename, c.columnname, c.ad_reference_id, c.AD_Reference_Value_ID
+from ad_column  c join ad_table t on c.AD_TABLE_ID=t.AD_TABLE_ID
+where c.isparent = 'Y' and  not
+(c.ad_reference_id = 19
+or (c.ad_reference_id = 30 and c.AD_Reference_Value_ID is null))
+order by 1,2
+						|| */ AD_Reference_ID == DisplayType.TableDir
 						|| (AD_Reference_ID == DisplayType.Search && AD_Reference_Value_ID == 0)
 					)
 				{
@@ -580,6 +624,9 @@ public class DataEngine
 				{
 					if (AD_Column_ID == orderAD_Column_IDs[i])
 					{
+						if (isDesc)
+							orderName += " DESC";
+
 						orderColumns.set(i, orderName);
 						// We need to GROUP BY even is not printed, because is used in ORDER clause
 						if (!IsPrinted && !IsGroupFunction)
@@ -622,7 +669,17 @@ public class DataEngine
 			hasLevelNo = true;
 			if (sqlSELECT.indexOf("LevelNo") == -1)
 				sqlSELECT.append("LevelNo,");
+			
+			if ( tableName.equals("T_Report") &&
+					sqlSELECT.indexOf("PA_ReportLine_ID") == -1)
+				sqlSELECT.append("PA_ReportLine_ID,");
 		}
+
+		//Table ID PrintColumn is needed but not present, manually add a dummy column
+		if (isTableIDRequired && !isTableIDPresent) {
+			sqlSELECT.append(tableName).append(".").append(MFactAcct.COLUMNNAME_AD_Table_ID).append(",");
+		}
+		
 
 		/**
 		 *	Assemble final SQL - delete last SELECT ','
@@ -640,6 +697,19 @@ public class DataEngine
 				String q = query.getWhereClause (i);
 				if (q.indexOf("AD_PInstance_ID") != -1)	//	ignore all other Parameters
 					finalSQL.append (q);
+			}	//	for all restrictions
+		}
+		else if (tableName.startsWith("AD_PInstance"))
+		{
+			finalSQL.append(" WHERE ");
+			for (int i = 0; i < query.getRestrictionCount(); i++)
+			{
+				String q = query.getWhereClause (i);
+				if (q.indexOf("AD_PInstance_ID") != -1)	
+				{//	ignore all other Parameters
+					q=q.substring(9);
+						finalSQL.append (q);
+				}
 			}	//	for all restrictions
 		}
 		else
@@ -689,7 +759,7 @@ public class DataEngine
 				finalSQL.append(by);
 			}
 		}	//	order by
-		
+
 
 		//	Print Data
 		PrintData pd = new PrintData (ctx, reportName);
@@ -699,7 +769,11 @@ public class DataEngine
 		pd.setTableName(tableName);
 		pd.setSQL(finalSQL.toString());
 		pd.setHasLevelNo(hasLevelNo);
-
+		pd.setHasLevelNo(hasLevelNo);
+		if (isTableIDRequired && !isTableIDPresent) {
+			pd.setHasDummyTableID(true);
+		}
+		
 		log.finest (finalSQL.toString ());
 		log.finest ("Group=" + m_group);
 		return pd;
@@ -793,6 +867,8 @@ public class DataEngine
 		PrintDataColumn pdc = null;
 		boolean hasLevelNo = pd.hasLevelNo();
 		int levelNo = 0;
+		int reportLineId = 0;
+		log.log(Level.FINE, "SQL: " +pd.getSQL());
 		//
 		PreparedStatement pstmt = null;
 		ResultSet rs = null;
@@ -804,23 +880,40 @@ public class DataEngine
 			while (rs.next())
 			{
 				if (hasLevelNo)
+				{
 					levelNo = rs.getInt("LevelNo");
+					if(pd.getTableName().equals("T_Report"))
+						reportLineId = rs.getInt("PA_ReportLine_ID");
+				}
 				else
 					levelNo = 0;
 				//	Check Group Change ----------------------------------------
 				if (m_group.getGroupColumnCount() > 1)	//	one is GRANDTOTAL_
 				{
+					List<PrintDataColumn> changedGroups = new ArrayList<>();
+					List<Object> changedValues = new ArrayList<>();
+					boolean force = false;
 					//	Check Columns for Function Columns
-					for (int i = pd.getColumnInfo().length-1; i >= 0; i--)	//	backwards (leaset group first)
+					for (int i = 0; i < pd.getColumnInfo().length; i++)	//	backwards (leaset group first)
 					{
 						PrintDataColumn group_pdc = pd.getColumnInfo()[i];
 						if (!m_group.isGroupColumn(group_pdc.getColumnName()))
 							continue;
-						
+
 						//	Group change
-						Object value = m_group.groupChange(group_pdc.getColumnName(), rs.getObject(group_pdc.getAlias()));
-						if (value != null)	//	Group change
+						Object value = m_group.groupChange(group_pdc.getColumnName(), rs.getObject(group_pdc.getAlias()), force);
+						if (value != null)    //	Group change
 						{
+							changedGroups.add(group_pdc);
+							changedValues.add(value);
+							force = true; // all subsequent groups force change
+						}
+					}
+
+					for (int j = changedGroups.size() - 1; j >= 0; j--) //backwards (least group first)
+					{
+						PrintDataColumn group_pdc = changedGroups.get(j);
+						Object value = changedValues.get(j);
 							char[] functions = m_group.getFunctions(group_pdc.getColumnName());
 							for (int f = 0; f < functions.length; f++)
 							{
@@ -837,6 +930,10 @@ public class DataEngine
 										String valueString = value.toString();
 										if (value instanceof Timestamp)
 											valueString = DisplayType.getDateFormat(pdc.getDisplayType(), m_language).format(value);
+
+										if (!format.getTableFormat().isPrintFunctionSymbols())		//	Translate Sum, etc.
+											valueString += " " + Msg.getMsg(format.getLanguage(), PrintDataFunction.getFunctionName(functions[f]));
+										else
 										valueString	+= PrintDataFunction.getFunctionSymbol(functions[f]);
 										pd.addNode(new PrintDataElement(pdc.getColumnName(),
 											valueString, DisplayType.String, false, pdc.isPageBreak(), pdc.getFormatPattern()));
@@ -857,16 +954,16 @@ public class DataEngine
 								pdc = pd.getColumnInfo()[c];
 								m_group.reset(group_pdc.getColumnName(), pdc.getColumnName());
 							}
-						}	//	Group change
-					}	//	for all columns
+					}	//	Group change
 				}	//	group change
 
 				//	new row ---------------------------------------------------
 				printRunningTotal(pd, levelNo, rowNo++);
 
 				/** Report Summary FR [ 2011569 ]**/ 
-				if(!m_summary)					
-					pd.addRow(false, levelNo);
+				if(!m_summary)
+					pd.addRow(false, levelNo, reportLineId);
+
 				int counter = 1;
 				//	get columns
 				for (int i = 0; i < pd.getColumnInfo().length; i++)
@@ -933,12 +1030,27 @@ public class DataEngine
 							//	Transformation for Booleans
 							if (pdc.getDisplayType() == DisplayType.YesNo)
 							{
+								String displayAs = MSysConfig.getValue(REPORT_DISPLAY_YES_NO, "text", Env.getAD_Client_ID(pd.getCtx()));
 								String s = rs.getString(counter++);
 								if (!rs.wasNull())
 								{
+									Serializable value = null;
 									boolean b = s.equals("Y");
-									pde = new PrintDataElement(pdc.getColumnName(), new Boolean(b), pdc.getDisplayType(), pdc.getFormatPattern());
+									if ( "symbol".equalsIgnoreCase(displayAs) )
+									{
+										value = b ? "\u2714" : "\u2718";
+									}
+									else if ( "image".equalsIgnoreCase(displayAs) )
+									{
+										value = Boolean.valueOf(b);
 								}
+									else  // default text
+									{
+										value = b ? "Y" : "N";
+							}
+									pde = new PrintDataElement(pdc.getColumnName(), value, pdc.getDisplayType(), pdc.getFormatPattern());
+								}
+								
 							}
 							else if (pdc.getDisplayType() == DisplayType.TextLong)
 							{
@@ -984,7 +1096,7 @@ public class DataEngine
 										pde = new PrintDataElement(pdc.getColumnName(), s, pdc.getDisplayType(), pdc.getFormatPattern());
 									}
 									else
-										pde = new PrintDataElement(pdc.getColumnName(), obj, pdc.getDisplayType(), pdc.getFormatPattern());
+										pde = new PrintDataElement(pdc.getColumnName(), (Serializable) obj, pdc.getDisplayType(), pdc.getFormatPattern());
 								}
 							}
 						}	//	Value only
@@ -997,7 +1109,10 @@ public class DataEngine
 						m_group.addValue(pde.getColumnName(), pde.getFunctionValue());
 					}
 				}	//	for all columns
-
+				if (pd.isHasDummyTableID()) {
+					String tableID = rs.getString("AD_Table_ID");
+					pd.addNode(tableID);
+				}
 			}	//	for all rows
 		}
 		catch (SQLException e)
@@ -1019,7 +1134,7 @@ public class DataEngine
 				PrintDataColumn group_pdc = pd.getColumnInfo()[i];
 				if (!m_group.isGroupColumn(group_pdc.getColumnName()))
 					continue;
-				Object value = m_group.groupChange(group_pdc.getColumnName(), new Object());
+				Object value = m_group.groupChange(group_pdc.getColumnName(), new Object(), false);
 				if (value != null)	//	Group change
 				{
 					char[] functions = m_group.getFunctions(group_pdc.getColumnName());
@@ -1036,6 +1151,10 @@ public class DataEngine
 								String valueString = value.toString();
 								if (value instanceof Timestamp)
 									valueString = DisplayType.getDateFormat(pdc.getDisplayType(), m_language).format(value);
+
+								if (!format.getTableFormat().isPrintFunctionSymbols())		//	Translate Sum, etc.
+									valueString += " " + Msg.getMsg(format.getLanguage(), PrintDataFunction.getFunctionName(functions[f]));
+								else
 								valueString	+= PrintDataFunction.getFunctionSymbol(functions[f]);
 								pd.addNode(new PrintDataElement(pdc.getColumnName(),
 									valueString, DisplayType.String, pdc.getFormatPattern()));
@@ -1072,7 +1191,8 @@ public class DataEngine
 						String name = "";
 						if (!format.getTableFormat().isPrintFunctionSymbols())		//	Translate Sum, etc.
 							name = Msg.getMsg(format.getLanguage(), PrintDataFunction.getFunctionName(functions[f]));
-						name += PrintDataFunction.getFunctionSymbol(functions[f]);	//	Symbol
+						else
+							name = PrintDataFunction.getFunctionSymbol(functions[f]);	//	Symbol
 						pd.addNode(new PrintDataElement(pdc.getColumnName(), name.trim(),
 								DisplayType.String, pdc.getFormatPattern()));
 					}
